@@ -22,12 +22,12 @@ int main()
     int i;
 
     p = (int *) malloc( 4 );
-    setvbuf (stdout, alloca (64), _IOLBF, 64);
+
     for (i = 1; i < 10; i++)
         {
             printf( "%d ", callee( i ));
-            
+            fflush (stdout);
         }
-    printf( " Goodbye!\n" );
+    printf( " Goodbye!\n" ); fflush (stdout);
     return 0;
 }
